--- a/css/recetas.css
+++ b/css/recetas.css
@@ -1,4 +1,3 @@
-/* styles.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -26,7 +25,7 @@ h1 {
 }
 
 .receta h2 {
-    color: #FF6600; /* Naranja, un color común en la cocina argentina */
+    color: #FF6600; 
 }
 
 .receta ul, .receta ol {
@@ -41,13 +40,12 @@ h1 {
 
 .volver a {
     text-decoration: none;
-    background-color: #FF6600; /* Naranja */
+    background-color: #FF6600; 
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
 }
 
 .volver a:hover {
-    background-color: #CC4400; /* Naranja más oscuro en el hover */
+    background-color: #CC4400; 
 }
-
