--- a/css/recetas.css
+++ b/css/recetas.css
@@ -1,20 +1,119 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #4f78e7;
     margin: 0;
     padding: 0;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-}
-
-h1 {
+header{
+    background-image: url('../imagenes/Portadav2.jpg');
+    background-size: cover;
+    border: 2px solid black; 
+    
+  }
+  
+  #barra_nav {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+    padding: 0;
     margin: 0;
-}
+  }
+  
+  #barra_nav li {
+    text-align: center;
+    border: 1px solid blue;
+    background-color: rgb(128, 240, 128);
+    padding: 10px;
+  }
+  
+  @media (min-width: 768px) {
+    #barra_nav {
+      grid-template-columns: repeat(4, 1fr);
+      grid-auto-rows: auto;
+    }
+  }
+  
+  
+  .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+  }
+
+  #navegacion{
+    background-color: #e9b4dc;
+    font-family: Handlee;
+    font-weight: 700;
+    text-align: center;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-bottom: 1%;
+    padding-top: 1%;
+    margin: 20px;
+    
+  }
+  
+  #navegacion a{
+    padding: 10px;
+  }
+  
+  
+  #navegacion #barra_nav li{
+      color: blue;
+      list-style-type: none ;
+      display: inline;
+  }
+  
+  /*#navegacion #barra_nav li>a:hover{
+      color: blue;
+      background-color: white;
+      transition: 1s ;
+  }*/
+  
+  #navegacion #barra_nav li:hover{
+      color: blue;
+      background-color: white;
+      transition: 1s ;
+  }
+  
+  #navegacion #barra_nav li>a:active{
+      color: #00FFFF;
+      background-color: white;
+  }
+      
+  #navegacion #barra_nav li>a{
+        text-decoration: none;
+  }
+
+
+
+
+
+  h1{color:rgb(0, 0, 0);
+    font-size: 60px;
+    font-weight:bold;
+    /* background-color: #FF7F50;*/
+    text-align: center;
+    font-family: Dancing Script;
+ }
+ 
+ @media (max-width: 768px) {
+   h1{
+       font-size: 35px; 
+       
+   }
+ }
 
 .receta {
     background-color: #fff;
