modificado:     Busqueda.html 	modificado:     Receta_chiquitos.html 	modificado:     css/Receta_chiquitos.css 	modificado:     css/busqueda.css 	nuevo archivo:  css/plato_del_dia.css 	modificado:     css/recetas_usuarios.css 	modificado:     libros.html 	modificado:     plato_del_dia.html     modificado:     recetas_usuarios.html

--- a/css/busqueda.css
+++ b/css/busqueda.css
@@ -154,3 +154,74 @@ button {
   background-color: #2c3e50; 
   color: #fff; 
 }
+
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px 0;
+  font-size: 14px;
+  text-align: center;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-logo img {
+  max-width: 100px;
+}
+
+
+@media (max-width: 767px) {
+  .footer-logo img {
+    display: none;
+  }
+ 
+  .footer-content {
+   text-align: center;
+   font-size: 10px;
+  }
+
+
+}
+
+.footer-contact p {
+  margin: 5px 0;
+}
+
+.footer-links ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-links li {
+  margin: 5px 0;
+  
+}
+
+.footer-links a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+
+.copyright {
+  margin-top: 20px;
+  border-top: 1px solid #555;
+  padding-top: 10px;
+  font-size: 12px;
+}
