--- a/css/recetas_usuarios.css
+++ b/css/recetas_usuarios.css
@@ -53,13 +53,7 @@ main {
     background-color: #5476b6;
 }
 
-footer {
-    text-align: center;
-    padding: 10px 0;
-    background-color: #8a8583;
-    color: #fff;
-    font-size: 14px;
-}
+
 
 
 h2 {
@@ -109,3 +103,74 @@ ol {
     padding: 5px;
     text-align: center;
 }
+
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    font-size: 14px;
+    text-align: center;
+  }
+  
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .footer-logo img {
+    max-width: 100px;
+  }
+  
+  
+  @media (max-width: 767px) {
+    .footer-logo img {
+      display: none;
+    }
+   
+    .footer-content {
+     text-align: center;
+     font-size: 10px;
+    }
+  
+  
+  }
+  
+  .footer-contact p {
+    margin: 5px 0;
+  }
+  
+  .footer-links ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .footer-links li {
+    margin: 5px 0;
+    
+  }
+  
+  .footer-links a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .footer-links a:hover {
+    text-decoration: underline;
+  }
+  
+  
+  .copyright {
+    margin-top: 20px;
+    border-top: 1px solid #555;
+    padding-top: 10px;
+    font-size: 12px;
+  }
