--- a/css/recetas.css
+++ b/css/recetas.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
